--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./server/server.js"
+    "start": "node ./server/server.js",
+    "dev": "nodemon ./server/server.js"
   },
   "keywords": [],
   "author": "",
@@ -15,5 +16,8 @@
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "nodejs-websocket": "^1.7.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.18"
   }
 }
